--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,12 @@
 
   <link rel="stylesheet" href="assets/vendor/daterangepicker/daterangepicker.css">
   <link rel="stylesheet" href="assets/vendor/tom-select/dist/css/tom-select.bootstrap5.css">
+  <script
+    src="https://code.jquery.com/jquery-3.7.1.min.js"
+    integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
+    crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+  <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js" defer></script>
 
   <!-- CSS Front Template -->
 
