--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,8 @@
   ></script>
   <link href="https://cdn.jsdelivr.net/npm/selectize@0.13.6/dist/css/selectize.bootstrap5.css" rel="stylesheet">
 
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
   <!-- CSS Front Template -->
 
   <link rel="preload" href="assets/css/theme.min.css" data-hs-appearance="default" as="style">
