--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,7 @@
   crossorigin="anonymous"
   referrerpolicy="no-referrer"
   />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/printThis/1.15.0/printThis.js"></script>
   <script
     src="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.15.2/js/selectize.min.js"
     integrity="sha512-IOebNkvA/HZjMM7MxL0NYeLYEalloZ8ckak+NDtOViP7oiYzG5vn6WVXyrJDiJPhl4yRdmNAG49iuLmhkUdVsQ=="
@@ -39,6 +40,7 @@
   <link href="https://cdn.jsdelivr.net/npm/selectize@0.13.6/dist/css/selectize.bootstrap5.css" rel="stylesheet">
 
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 
   <!-- CSS Front Template -->
 
